--- a/page2.html
+++ b/page2.html
@@ -82,9 +82,9 @@ refugees fleeing violence and persecution from neighboring Myanmar. This project
 quantifies coastal erosion and accretion along the shoreline of Cox’s
 Bazar using Landsat imagery from February 1989 and January 2018.
 </p>
-            <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vSTeMH6gD2ArCWGh85Bz3EeDSKgIFTNOIKgTyQKotaaZnUDx-ASTlXeypwaHA9Gz_6cXzXiMSC1uCNH/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
+            <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vRCPdMZxhRCQBxU4OleRE1FcxAzDjFU46qmLNIzi65W8yVdv3Sg6ds8fJwSegLWYKgwZN4sf4XXcuEa/pub?start=false&loop=false&delayms=3000&slide=id.p" target="_blank">GIS Presentation</a>
             <br>
-            <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vQfiYMif5OHdCvLt-n4ENUc2bKx1XzdxvedEF5CKFqtire9-qphIC9EzY2wuYVYOr2emQGmbsEzBuPo/pub" target="_blank">Project Methods</a>
+            <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vTU2QWL02W28XqZzK0KO3aF7yjYGdbqJot_pXuMEwmmghiy-OhYEJHs4YBML7H1fXEcA7j5V41t5sr2/pub" target="_blank">Project Methods</a>
           </div>
         </div>
       </div>
