--- a/page3.html
+++ b/page3.html
@@ -52,7 +52,7 @@ While the New York City (NYC) Citi Bike network enjoys the highest rate of rider
 This spatial analysis set out to better understand how well the bike dock network is serving NYC residents, as revealed by social vulnerability indicators at the census tract level, bike dock usage levels, and dock density.
 The analysis finds that the population of the Citi Bike service area is significantly less vulnerable than the city as a whole, and that dock density and dock use fall from the center of the network towards the periphery.
 This analysis is also used to inform a hypothetical future dock placement informed by a spatial analysis for social vulnerability.</p>
-              <a class="text-secondary" href="https://docs.google.com/presentation/d/1vrPIdvTs44_goutrjsGdYIZEbkc1kCDnx2sSKs6hrh4/edit?usp=sharing" target="_blank">GIS Presentation</a>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vRCXTamG6CpNpkQ0LYeTu_V1lO8M-bMnKHmFJPOWw3xdcN1RlYAL0rQZbZ4eF-OGbZSrSVuRL8sS6Lo/pub?start=false&loop=false&delayms=3000&slide=id.p1" target="_blank">GIS Presentation</a>
               <br>
               <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vSkr_vhQ-gkEtw4vUwRex3g9H6RBmzyzJYaNpwbgKvbM059j4C8qyqp8cj4h6_tCbn35QQeuuOtCmhy/pub" target="_blank">Project Methods</a>
             </div>
@@ -119,7 +119,7 @@ In the past decade on its own, the city has been regarded as an exception to the
 rules that govern America urban growth. Initially a small region
 in Southern California, with no apparent potential urban growth, Los Angeles continues to expand
 horizontally at rapid rates.</p>
-              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vRU4U5m1CC7vqrs6p2HGcad9Pgm89oZ3DVmWuwUfGodujiCBIk4PJGM8OMYhRltFkTBSCwuIodZPK_f/pub?start=false&loop=false&delayms=3000&slide=id.p1" target="_blank">GIS Presentation</a>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vR7mtFySDtj1hhv_eEMfKfRF0tM18G1DVL_F7mAOkgq9PY9p7alTlWryxJjOfFAQ3gXSlLIQE6yVAkw/pub?start=false&loop=false&delayms=3000&slide=id.g3960df5ea0_1_109" target="_blank">GIS Presentation</a>
               <br>
               <a class="text-secondary" href="https://drive.google.com/file/d/1r9xLqu5T3LdbUCEo75YFYi1FRoWcX-DK/view" target="_blank">Project Methods</a>
             </div>
